--- a/index.html
+++ b/index.html
@@ -1,39 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Intermediate Web Project</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>My Personal Blog</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <aside class="sidebar">
+      <div class="profile">
+        <img
+          src="C:\Users\srivi\OneDrive\Desktop\srividya photo.jpg"
+          alt="Profile Picture"
+          class="profile-img"
+        />
+        <h2 class="profile-name">Sri Vidya</h2>
+        <p class="profile-role">Web Developer & Blogger</p>
+        <div class="social-icons">
+          <a
+            href="https://github.com/"
+            target="_blank"
+            aria-label="GitHub"
+            rel="noopener noreferrer"
+          >
+            <svg
+              aria-hidden="true"
+              focusable="false"
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M12 0a12 12 0 00-3.79 23.4c.6.11.82-.26.82-.58v-2.3c-3.34.73-4.04-1.61-4.04-1.61a3.18 3.18 0 00-1.34-1.76c-1.1-.75.08-.74.08-.74a2.5 2.5 0 011.83 1.23 2.53 2.53 0 003.45 1 2.54 2.54 0 01.75-1.59c-2.66-.3-5.46-1.33-5.46-5.91a4.62 4.62 0 011.23-3.2 4.3 4.3 0 01.12-3.16s1-.32 3.3 1.23a11.4 11.4 0 016 0c2.28-1.55 3.3-1.23 3.3-1.23a4.3 4.3 0 01.12 3.16 4.6 4.6 0 011.22 3.2c0 4.6-2.8 5.6-5.47 5.89a2.85 2.85 0 01.82 2.2v3.27c0 .32.22.7.83.58A12 12 0 0012 0z"
+              ></path>
+            </svg>
+          </a>
+          <a
+            href="https://linkedin.com/"
+            target="_blank"
+            aria-label="LinkedIn"
+            rel="noopener noreferrer"
+          >
+            <svg
+              aria-hidden="true"
+              focusable="false"
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M4.98 3.5A2.5 2.5 0 002.5 6v12a2.5 2.5 0 002.48 2.5h12.5a2.5 2.5 0 002.5-2.5V6a2.5 2.5 0 00-2.5-2.5H4.98zm3.02 14h-3V10h3v7.5zm-1.5-8.4a1.75 1.75 0 110-3.5 1.75 1.75 0 010 3.5zm9.5 8.4h-3v-4c0-1-.5-1.5-1.25-1.5s-1.25.6-1.25 1.5v4h-3v-7.5h3v1a3 3 0 012.6-1.3 3.2 3.2 0 013.4 3.4v4.4z"
+              ></path>
+            </svg>
+          </a>
+          <a
+            href="https://twitter.com/"
+            target="_blank"
+            aria-label="Twitter"
+            rel="noopener noreferrer"
+          >
+            <svg
+              aria-hidden="true"
+              focusable="false"
+              width="24"
+              height="24"
+              fill="currentColor"
+              viewBox="0 0 24 24"
+            >
+              <path
+                d="M23 3a10.9 10.9 0 01-3.14.86 4.48 4.48 0 001.96-2.48 9.11 9.11 0 01-2.88 1.1A4.52 4.52 0 0016.07 2a4.48 4.48 0 00-4.17 5.5 12.75 12.75 0 01-9.26-4.7 4.48 4.48 0 001.39 6 4.38 4.38 0 01-2.04-.56v.06a4.48 4.48 0 003.6 4.4 4.4 4.4 0 01-2.03.07 4.48 4.48 0 004.18 3.1A9 9 0 013 19.54 12.73 12.73 0 009 21c7.55 0 11.68-6.3 11.68-11.76 0-.18 0-.35-.01-.52A8.18 8.18 0 0023 3z"
+              ></path>
+            </svg>
+          </a>
+        </div>
+      </div>
+      <nav class="sidebar-nav">
+        <a href="#home" class="nav-link active">Home</a>
+        <a href="#about" class="nav-link">About</a>
+        <a href="#blog" class="nav-link">Blog</a>
+        <a href="#contact" class="nav-link">Contact</a>
+      </nav>
+    </aside>
 
-  <header class="navbar">
-    <h1>My Web Project</h1>
-  </header>
+    <main class="main-content">
+      <section id="home" class="section home-section">
+        <h1>Welcome to My Blog</h1>
+        <p>
+          Your quick stop for hands-on dev tips, design inspo, and real-world
+          lessons from a coffee-fueled front-end coder. Dive in, try a snippet,
+          and leave with fresh ideas to build something awesome.
+        </p>
+      </section>
 
-  <main class="main-grid">
-    <!-- Contact Form -->
-    <section class="contact">
-      <h2>Contact Form</h2>
-      <form id="contactForm">
-        <input type="text" id="name" placeholder="Your Name" required />
-        <input type="email" id="email" placeholder="Your Email" required />
-        <textarea id="message" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
-      <p id="formMessage"></p>
-    </section>
+      <section id="about" class="section about-section">
+        <h2>About Me</h2>
+        <p>
+          I’m a curious-minded front-end developer who turns ideas into engaging
+          web experiences. My happy place is the intersection of clean code and
+          striking design—whether I’m crafting a silky-smooth CSS animation or
+          transforming complex data into a simple UI.Off screen you’ll find me
+          sipping iced coffee, sketching interface concepts, or hunting for the
+          perfect sunset photo to inspire my next color palette. I believe great
+          products are built with empathy, pixels of patience, and a dash of
+          playfulness—and I try to bring those values to every project and team
+          I join.
+        </p>
+      </section>
 
-    <!-- To-Do List -->
-    <section class="todo">
-      <h2>To-Do List</h2>
-      <input type="text" id="todoInput" placeholder="Enter a task" />
-      <button onclick="addTask()">Add Task</button>
-      <ul id="todoList"></ul>
-    </section>
-  </main>
+      <section id="blog" class="section blog-section">
+        <h2>Latest Posts</h2>
+        <div id="posts" class="posts-list"></div>
+      </section>
 
-  <script src="script.js"></script>
-</body>
+      <section id="contact" class="section contact-section">
+        <h2>Contact Me</h2>
+        <p>Feel free to reach out via social media or email.</p>
+        <p>
+          Email:
+          <a href="mailto:your.sree@gmail.com" class="email-link"
+            >sree@gmail.com</a
+          >
+        </p>
+      </section>
+    </main>
+
+    <div
+      id="modal"
+      class="modal hidden"
+      role="dialog"
+      aria-modal="true"
+      aria-labelledby="modal-title"
+    >
+      <div class="modal-content-wrapper">
+        <button id="modal-close" aria-label="Close modal">×</button>
+        <h2 id="modal-title"></h2>
+        <img id="modal-img" alt="" />
+        <div id="modal-body"></div>
+      </div>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
